--- a/RPi Cloud/css/index.css
+++ b/RPi Cloud/css/index.css
@@ -1,7 +1,12 @@
+:root {
+    --primary-color: #1d2634;  /* Dark blue-gray */
+    --secondary-color: #181c50;
+}
+
 body {
     margin: 0;
     padding: 0;
-    background-color: #1d2634;
+    background-color: var(--primary-color);
     color: #9e9ea4;
     font-family: "Montserrat", sans-serif;
 }
@@ -200,6 +205,10 @@ body {
 }
 
 /*---------Login.html------------*/
+.login {
+    background: linear-gradient(to right, var(--primary-color) 0%, var(--secondary-color) 50%, var(--primary-color) 100%);
+}
+
 .login-page-container {
     height: 100%;
     margin: 0;
@@ -211,12 +220,19 @@ body {
 .login-container {
     padding: 50px;
     box-sizing: border-box;
-    border: 2px solid black
+    background-color: var(--primary-color);
+    border-radius: 40px;
+}
+
+#cloud-icon {
+    display: flex;
+    padding: 20px 0 20px 0;
+    font-size: 75px;
+    justify-content: center;
 }
 
 .login-container > h1  {
     font-size: 50px;
-
 }
 
 .username-password-container {
