--- a/src/web/static/css/style.css
+++ b/src/web/static/css/style.css
@@ -1,6 +1,8 @@
 :root {
     --primary-color: #1d2634;  /* Dark blue-gray */
     --secondary-color: #181c50;
+    --font-size: 16px;
+    --font-color: #9e9ea4;
 }
 
 body {
@@ -15,6 +17,7 @@ body {
     vertical-align: middle;
     line-height: 1px;
     font-size: 35px;
+    max-width: 35px;
 }
 
 .grid-container {
@@ -33,19 +36,14 @@ body {
     height: 70px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
     padding: 0 30px 0 30px;
     box-shadow: 0 6px 7px -3px rgba(0, 0, 0, 0.35);
 }
 
-.header-title {
-    text-align: center;
-}
-
 .search {
+    margin-right: 14px;
     width: max-content;
-    display: flex;
-    align-items: center;
     padding: 14px;
     border-radius: 100px;
     background: #f6f6f6;
@@ -59,12 +57,39 @@ body {
     border: none;
     background: transparent;
 }
+
 .search-input::placeholder {
     color: #9e9ea4
 }
 
+.quick-upload {
+    margin-right: auto;
+    background: #f6f6f6;
+    border-radius: 100px;
+}
+
+.quick-upload-button {
+    background: none;
+    border: none;
+    font-size: var(--font-size);
+    padding: 14px;
+    color: var(--font-color);
+}
+
+.quick-upload-button > span {
+    padding-right: 14px; 
+}
+
+.quick-upload-button:hover {
+    background: #cccccc;
+    color: #61615b;
+    cursor: pointer;
+    border-radius: 100px;
+}
+
 .menu-icon {
     display: none;
+    margin-right: 14px;
 }
 
 .menu-icon:hover {
@@ -81,21 +106,28 @@ body {
     -webkit-transition: all 0.5s;
 }
 
-.sidebar-title > span {
+.exit-icon {
+    /* Exit icon needs to disappear and be at the top right corner of the sidebar */
     display: none;
+    margin-top: 14px;
+    justify-content: right;
 }
 
 .sidebar-title {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 30px 30px 30px 30px;
-    margin-bottom: 30px;
+    padding: 10px 30px 10px 30px;
+}
+
+.header-title {
+    font-size: 24px;
 }
 
 .sidebar-title > span:hover {
     cursor: pointer;
 }
+
 
 .sidebar-brand {
     margin-top: 15px;
