--- a/src/web/templates/login.html
+++ b/src/web/templates/login.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
 
     <!--Custom CSS-->
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="../static/css/style.css">
     
 </head>
 
@@ -40,7 +40,7 @@
                 <br>
                 <div class="button-forgot">
                     <button type="submit" id="button">Login</button>
-                    <p><a href="#">Forgot Password?</a></p>
+                    <p><a href="index.html">Forgot Password?</a></p>
                 </div>
             </form>
         </div>
