Updated the login page and made the css more neat. However, in doing so, index.html created a problem where the sidebar is no longer the sidebar.

--- a/src/web/static/css/style.css
+++ b/src/web/static/css/style.css
@@ -261,6 +261,8 @@ body {
     padding: 20px 0 20px 0;
     font-size: 75px;
     justify-content: center;
+    margin: auto;
+
 }
 
 .login-container > h1  {
