--- a/src/web/templates/index.html
+++ b/src/web/templates/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <div class="grid-container">
+    <div class="container">
 
         <!--Header-->
         <header class="header">
