--- a/src/web/templates/login.html
+++ b/src/web/templates/login.html
@@ -16,34 +16,35 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
 
     <!--Custom CSS-->
-    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/css/login.css">
     
 </head>
 
-<body class="login">
-    <div class="login-page-container">
-        <div class="login-container">
-        <span class="material-icons-outlined" id="cloud-icon">cloud</span>
-            <h1>PiVault Login</h1>
-            <form action="" method="post">
-                <div class="username-password-container">
-                    <div class="username-password">
-                        <span class="material-icons-outlined">person</span>
-                        <input type="text" class="input" name="username" id="username" placeholder="Username">
-                    </div>
-                    <br>
-                    <div class="username-password">
-                        <span class="material-icons-outlined">lock</span>
-                        <input type="text" class="input" name="password" id="password" placeholder="Password">
-                    </div>
-                </div>
-                <br>
-                <div class="button-forgot">
-                    <button type="submit" id="button">Login</button>
-                    <p><a href="index.html">Forgot Password?</a></p>
-                </div>
-            </form>
-        </div>
+<body>
+    <div class="wrapper">
+        <form action="" method="post">
+            <h1>Nexus Login</h1>
+            <div class="input-box">
+                <input type="text" placeholder="Username" required>
+                <span class="material-icons-outlined">person</span>
+            </div>
+            <div class="input-box">
+                <input type="password" placeholder="Password" required>
+                <span class="material-icons-outlined">lock</span>
+            </div>
+
+            <div class="remember-forgot">
+                <label><input type="checkbox"> Remember me</label>
+                <a href="#">Forgot password?</a>
+            </div>
+
+            <button type="submit" class="btn">Login</button>
+
+            <div class="register-link">
+                <p>Don't have an account? <a href="index.html">Request Here!</a></p>
+            </div>
+
+        </form>
     </div>
 </body>
 </html>
