--- a/src/web/static/css/login.css
+++ b/src/web/static/css/login.css
@@ -23,7 +23,7 @@ body {
     width: 420px;
     color: white;
     border-radius: 10px;
-    padding: 30px 40px;
+    padding: 50px;
 }
 
 .wrapper h1 {
