--- a/src/web/static/css/style.css
+++ b/src/web/static/css/style.css
@@ -20,7 +20,7 @@ body {
     max-width: 35px;
 }
 
-.grid-container {
+.container {
     display: grid;
     grid-template-columns: 260px 1fr 1fr 1fr;
     grid-template-rows: 0.2fr 3fr;
@@ -235,84 +235,6 @@ body {
     align-items: center;
     justify-content: space-between;
 }
-
-/*---------Login.html------------*/
-.login {
-    background: linear-gradient(to right, var(--primary-color) 0%, var(--secondary-color) 50%, var(--primary-color) 100%);
-}
-
-.login-page-container {
-    height: 100%;
-    margin: 0;
-    display: grid;
-    place-items: center;
-    margin-top: 100px;
-}
-
-.login-container {
-    padding: 50px;
-    box-sizing: border-box;
-    background-color: var(--primary-color);
-    border-radius: 40px;
-}
-
-#cloud-icon {
-    display: flex;
-    padding: 20px 0 20px 0;
-    font-size: 75px;
-    justify-content: center;
-    margin: auto;
-
-}
-
-.login-container > h1  {
-    font-size: 50px;
-}
-
-.username-password-container {
-    display: block;
-    justify-content: center;
-    align-items: center;
-}
-
-.username-password {
-    display: flex;
-    align-items: center;
-    margin-top: 30px;
-    padding: 14px;
-    border-radius: 100px;
-    background: #f6f6f6;
-}
-
-.input {
-    font-size: 16px;
-    color: #333333;
-    margin-left: 14px;
-    outline: none;
-    border: none;
-    background: transparent;
-}
-
-.button-forgot {
-    display: flex;
-    align-items: center;
-    font-size: 16px;
-    justify-content: space-between;
-    padding-top: 30px;
-}
-.button-forgot > button {
-    font-size: 16px;
-    color: #333333;
-    border: none;
-    border-radius: 100px;
-    padding: 14px 25px 14px 25px;
-}
-
-#button:hover {
-    background-color: rgba(255, 255, 255, 0.2);
-    cursor: pointer;
-}
-
 
 /*---------MEDIA QUERIES---------*/
 
