--- a/src/web/templates/index.html
+++ b/src/web/templates/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
 
     <!--Custom CSS-->
-    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/css/style2.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
                 <span class="material-icons-outlined">menu</span>
             </div>
             <div class="quick-upload">
-                <button class="quick-upload-button">
+                <button>
                     <span class="material-icons-outlined">cloud_upload</span> Quick Upload
                 </button>
             </div>
@@ -45,7 +45,7 @@
         <!--End Header-->
 
         <!--Sidebar-->
-        <aside id="sidebar">
+        <aside class="sidebar">
             <div class="exit-icon">
                 <span class="material-icons-outlined" onclick="closeSidebar()">close</span>
             </div>
