--- a/src/web/static/css/style2.css
+++ b/src/web/static/css/style2.css
@@ -1,3 +1,9 @@
+/* 
+Change the following: 
+    - Change the text color for when the user hovers over options
+    - Change everything into bootstrap and CSS
+*/
+
 :root {
     --primary-color: #1d2634;  /* Dark blue-gray */
     --secondary-color: #181c50;
@@ -14,12 +20,11 @@
 
 body {
     min-height: 100vh;
-    /* background-image: url("../images/login-background6.jpg");
+    background-image: url("../images/login-background6.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    backdrop-filter: blur(50px); */
-    background-color: aqua;
+    backdrop-filter: blur(100px);
 }
 
 .container {
@@ -36,11 +41,13 @@ body {
 .header {
     grid-area: header;
     grid-area: 70px;
-    background-color: lightcoral;
+    background-color: #1b273a;
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    padding: 0 14px 0 14px;
     gap: 30px;
+    color: var(--font-color);
 }
 
 .quick-upload {
@@ -67,6 +74,7 @@ body {
     justify-content: center;
     align-items: center;
     padding-right: 14px;
+    color: var(--font-color);
 }
 
 .quick-upload button:hover {
@@ -76,11 +84,193 @@ body {
     border-radius: 100px;
 }
 
+.search {
+    display: flex;
+    background: #f6f6f6;
+    border-radius: 100px;
+    width: max-content;
+    padding: 14px;
+}
 
+.search input {
+    outline: none;
+    border: none;
+    background: transparent;
+    font-size: var(--font-size);
+}
+
+.search span {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding-right: 14px;
+    color: var(--font-color);
+}
 
 /*----------Sidebar----------*/
-.sidebar  {
+.sidebar {
     grid-area: sidebar;
-    background-color: darkblue;
-    box-shadow: 0 6px 7px -3px rgba(0, 0, 0, 0.35);    
+    background-color: #263043;
+    box-shadow: 0 6px 7px -3px rgba(0, 0, 0, 0.35);
+    color: var(--font-color);
+}
+
+.sidebar-title, .header-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 70px;
+    font-size: 24px;
+    position: relative;
+}
+
+.exit-icon {
+    position: absolute;
+    right: 10px;
+}
+
+.sidebar-list {
+    list-style: none;
+}
+
+.sidebar-list-item a {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding: 20px;
+    font-size: 20px;
+}
+
+.sidebar-list-item span {
+    margin-right: 10px;
+}
+
+.sidebar-list-item:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+    cursor: pointer;
+}
+
+/*----------Main-----------*/
+.main-container {
+    grid-area: main;
+    overflow-y: auto;
+    padding: 20px;
+    background-color: #2f3b50;
+}
+
+.main-title {
+    font-size: 20px;
+    display: flex;
+    justify-content: space-between; 
+}
+
+.main-cards {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); 
+    gap: 20px;
+    margin: 20px 0;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 25px;
+    border-radius: 5px;
+    color: rgba(255, 255, 255, 0.95);
+}
+
+.card:nth-child(1) {
+    background-color: #2962ff;
+}
+
+.card:nth-child(2) {
+    background-color: #ff6d00;
+}
+
+.card:nth-child(3) {
+    background-color: #2e7d32;
+}
+
+.card:nth-child(4) {
+    background-color: #d50000;
+}
+
+.card-inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.card-inner .material-icons-outlined {
+    font-size: 45px;
+}
+
+.charts {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); 
+    gap: 20px;
+    margin-top: 60px;
+}
+
+.charts-card {
+    background-color: #263043;
+    padding: 25px;
+    box-sizing: border-box;
+    border-radius: 5px;
+    box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
+    break-inside: avoid; 
+}
+
+.chart-title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+/*---------MEDIA QUERIES---------*/
+
+/* Medium <= 992px */
+@media screen and (max-width: 992px) {
+    .grid-container {
+        grid-template-columns: 1fr;
+        grid-template-rows: 0.2fr 3fr;
+        grid-template-areas: 
+            "header"
+            "main";
+    }
+
+    #sidebar {
+        display: none;
+    }
+
+    .menu-icon {
+        display: inline;
+    }
+
+    .sidebar-title > span {
+        display: inline;
+    }
+}
+
+/* small <= 769px */
+@media screen and (max-width: 769px) {
+    .main-cards {
+        grid-template-columns: 1fr;
+        gap: 10px;
+        margin-bottom: 0;
+    }
+
+    .charts {
+        grid-template-columns: 1fr;
+        margin-top: 30px;
+    }
+}
+
+/* extra small <= 576px */
+@media screen and (max-width: 576px) {
+    .header-left {
+        display: none;
+    }
 }
