--- a/src/web/static/css/login.css
+++ b/src/web/static/css/login.css
@@ -62,6 +62,11 @@ body {
     transform: translateY(-50%);
 }
 
+.input-box input:focus {
+    border-color: #ffffff;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.8); /* Glowing blue shadow */
+}
+
 .wrapper .remember-forgot {
     display: flex;
     justify-content: space-between;
@@ -78,6 +83,10 @@ body {
     text-decoration: underline;
 }
 
+.remember-forgot input:hover {
+    cursor: pointer;
+}
+
 .wrapper .btn {
     width: 100%;
     height: 45px;
@@ -90,6 +99,15 @@ body {
     font-size: 16px;
     color: #333;
     font-weight: 600;
+}
+
+.btn:hover {
+    background-color: #c0c0c0; /* Slightly darker shade on hover */
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2); /* Subtle shadow on hover */
+}
+
+.btn:active {
+    background-color: #888888; /* Even darker on click */
 }
 
 .wrapper .register-link {
