--- a/src/web/static/css/style.css
+++ b/src/web/static/css/style.css
@@ -1,3 +1,9 @@
+/* 
+Change the following: 
+    - Change the text color for when the user hovers over options
+    - Change everything into bootstrap and CSS
+*/
+
 :root {
     --primary-color: #1d2634;  /* Dark blue-gray */
     --secondary-color: #181c50;
@@ -5,70 +11,56 @@
     --font-color: #9e9ea4;
 }
 
-body {
+* {
     margin: 0;
     padding: 0;
-    background-color: var(--primary-color);
-    color: #9e9ea4;
-    font-family: "Montserrat", sans-serif;
+    box-sizing: border-box;
 }
 
-.material-icons-outlined {
-    vertical-align: middle;
-    line-height: 1px;
-    font-size: 35px;
-    max-width: 35px;
+body {
+    min-height: 100vh;
+    /* background-image: url("../images/login-background6.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    backdrop-filter: blur(100px); */
 }
 
-.container {
+.wrapper {
     display: grid;
-    grid-template-columns: 260px 1fr 1fr 1fr;
-    grid-template-rows: 0.2fr 3fr;
-    grid-template-areas: 
-        "sidebar header header header"
-        "sidebar main main main";
     height: 100vh;
+    grid-template-columns: 260px 1fr 1fr 1fr;
+    grid-template-rows: 70px 3fr;
+    grid-template-areas: 
+        "header header header header"
+        "sidebar main main main";
 }
 
-/*---------Header---------*/
+/*----------Header----------*/
 .header {
     grid-area: header;
-    height: 70px;
+    grid-area: 70px;
+    background-color: #1b273a;
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    padding: 0 30px 0 30px;
-    box-shadow: 0 6px 7px -3px rgba(0, 0, 0, 0.35);
-}
-
-.search {
-    margin-right: 14px;
-    width: max-content;
-    padding: 14px;
-    border-radius: 100px;
-    background: #f6f6f6;
-}
-
-.search-input {
-    font-size: 16px;
-    color: #333333;
-    margin-left: 14px;
-    outline: none;
-    border: none;
-    background: transparent;
-}
-
-.search-input::placeholder {
-    color: #9e9ea4
+    padding: 0 14px 0 14px;
+    gap: 30px;
+    color: var(--font-color);
 }
 
 .quick-upload {
+    display: flex;
     margin-right: auto;
     background: #f6f6f6;
     border-radius: 100px;
+    position: relative;
 }
 
-.quick-upload-button {
+.quick-upload button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background: none;
     border: none;
     font-size: var(--font-size);
@@ -76,76 +68,81 @@ body {
     color: var(--font-color);
 }
 
-.quick-upload-button > span {
-    padding-right: 14px; 
+.quick-upload span {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding-right: 14px;
+    color: var(--font-color);
 }
 
-.quick-upload-button:hover {
-    background: #cccccc;
-    color: #61615b;
+.quick-upload button:hover {
     cursor: pointer;
+    color: #61615b;
+    background-color: #9e9e9e;
     border-radius: 100px;
 }
 
-.menu-icon {
-    display: none;
-    margin-right: 14px;
+.search {
+    display: flex;
+    background: #f6f6f6;
+    border-radius: 100px;
+    width: max-content;
+    padding: 14px;
 }
 
-.menu-icon:hover {
-    cursor: pointer;
+.search input {
+    outline: none;
+    border: none;
+    background: transparent;
+    font-size: var(--font-size);
 }
 
-/*---------Sidebar---------*/
-#sidebar {
+.search span {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding-right: 14px;
+    color: var(--font-color);
+}
+
+/*----------Sidebar----------*/
+.sidebar {
     grid-area: sidebar;
-    height: 100%;
     background-color: #263043;
-    overflow-y: auto;
-    transition: all 0.5s;
-    -webkit-transition: all 0.5s;
+    box-shadow: 0 6px 7px -3px rgba(0, 0, 0, 0.35);
+    color: var(--font-color);
 }
 
-.exit-icon {
-    /* Exit icon needs to disappear and be at the top right corner of the sidebar */
-    display: none;
-    margin-top: 14px;
-    justify-content: right;
-}
-
-.sidebar-title {
+.sidebar-title, .header-title {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px 30px 10px 30px;
-}
-
-.header-title {
+    width: 100%;
+    height: 70px;
     font-size: 24px;
+    position: relative;
 }
 
-.sidebar-title > span:hover {
-    cursor: pointer;
-}
-
-
-.sidebar-brand {
-    margin-top: 15px;
-}
-
-#title-icon {
-    font-size: 75px; /* The cloud is unproportional to the 'x' in the hidden sidebar */
+.exit-icon {
+    position: absolute;
+    right: 10px;
 }
 
 .sidebar-list {
-    padding: 0;
-    margin-top: 15px;
-    list-style-type: none;
+    list-style: none;
 }
 
-.sidebar-list-item {
-    padding: 20px 20px 20px 20px;
-    font-size: 18px;
+.sidebar-list-item a {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding: 20px;
+    font-size: 20px;
+}
+
+.sidebar-list-item span {
+    margin-right: 10px;
 }
 
 .sidebar-list-item:hover {
@@ -153,28 +150,23 @@ body {
     cursor: pointer;
 }
 
-.sidebar-responsive {
-    display: inline !important;
-    position: absolute;
-    z-index: 12 !important;
-}
-
-/*---------Main---------*/
+/*----------Main-----------*/
 .main-container {
     grid-area: main;
     overflow-y: auto;
-    padding: 20px 20px;
-    color: rgba(255, 255, 255, 0.95);
+    padding: 20px;
+    background-color: #2f3b50;
 }
 
 .main-title {
+    font-size: 20px;
     display: flex;
-    overflow-y: space-between;
+    justify-content: space-between; 
 }
 
 .main-cards {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr); 
     gap: 20px;
     margin: 20px 0;
 }
@@ -185,9 +177,10 @@ body {
     justify-content: space-around;
     padding: 25px;
     border-radius: 5px;
+    color: rgba(255, 255, 255, 0.95);
 }
 
-.card:first-child {
+.card:nth-child(1) {
     background-color: #2962ff;
 }
 
@@ -209,25 +202,24 @@ body {
     justify-content: space-between;
 }
 
-.card-inner > .material-icons-outlined {
+.card-inner .material-icons-outlined {
     font-size: 45px;
 }
 
 .charts {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(2, 1fr); 
     gap: 20px;
     margin-top: 60px;
 }
 
 .charts-card {
     background-color: #263043;
-    margin-bottom: 20px;
     padding: 25px;
     box-sizing: border-box;
-    -webkit-column-break-inside: avoid;
     border-radius: 5px;
     box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
+    break-inside: avoid; 
 }
 
 .chart-title {
