--- a/src/web/templates/index1.html
+++ b/src/web/templates/index1.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid min-vh-100">
 
         <!--Header-->
         <header class="row align-items-center p-3 bg-primary text-white">
