--- a/src/web/static/css/style.css
+++ b/src/web/static/css/style.css
@@ -19,6 +19,7 @@ Change the following:
 
 body {
     min-height: 100vh;
+    font-family: "montserrat", sans-serif;
     /* background-image: url("../images/login-background6.jpg");
     background-repeat: no-repeat;
     background-size: cover;
